--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "hcaptcha": "^0.2.0",
-    "marked": "^16.1.1"
+    "marked": "^16.1.1",
+    "xss": "^1.0.15"
   }
 }
